# OpenTTDdll

./: CMakeLists.txt  vcpkg.json
.github/codeql/: codeql-config.yml
.github/workflows/: ci-build.yml  ci-emscripten.yml  ci-linux.yml  ci-macos.yml  ci-nightly.yml  ci-windows.yml  codeql.yml  msbuild.yml  release-macos.yml
src/: rev.h
